[package]
name = "whisper-ort"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"


[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.4", features = ["operator-libraries", "coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.4", features = ["operator-libraries", "directml"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.4", features = ["operator-libraries"] }

[features]
default = ["download-binaries"]
download-binaries = ["ureq", "zip"]

[build-dependencies]
ureq = { version = "2.1", optional = true, default-features = false, features = [
    "tls",
    "socks-proxy",
] }
zip = { version = "0.6", default-features = false, features = [
    "deflate",
], optional = true }
